[package]
name = "learn__crate__solana-sdk"
version = "0.1.0"
authors = ["Max Block <maxblock@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
solana-account-decoder = "1.8.0"
solana-client = "1.8.0"
solana-sdk = "1.8.0"
solana-stake-program = "1.8.0"
solana-vote-program = "1.8.0"
